📱 Fix homepage responsive behaviour on mobile

--- a/assets/sass/components/_clubmodal.sass
+++ b/assets/sass/components/_clubmodal.sass
@@ -92,7 +92,7 @@
     margin-bottom: 22px
 
   &Close
-    @extend .tag
+    @extend .caption
     display: flex
     flex-direction: row
     align-items: center
