--- a/assets/sass/components/_text-styles.sass
+++ b/assets/sass/components/_text-styles.sass
@@ -28,15 +28,16 @@ body
   padding-bottom: 3px
 
   font-family: bluu-suuperstar-black
-  letter-spacing: -2px
 
   +adapt($bkp-mobile)
-    font-size: 44px
+    font-size: 40px
     line-height: 52px
+    letter-spacing: -1px
 
   +adapt($bkp-tablet)
     font-size: 64px
     line-height: 80px
+    letter-spacing: -2px
 
   +adapt($bkp-desktop-sd)
     font-size: 95px
